# wilma-digest

./: .env.example  .gitignore  CLAUDE.md  README.md  com.wilma-digest.plist  pyproject.toml  task.example.yaml
sam/: Makefile  lambda_handler.py  samconfig.toml
src/wilma_digest/: main.py  summarizer.py  telegram.py  wilma.py
